# aether

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: deployment.yml
chart/: Chart.yaml
chart/templates/: ingressclass.yml  loadbalancer.yaml
chart/templates/deploment/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
src/: main.rs  request.rs  server.rs  tls.rs
src/kube/: mod.rs  state.rs
