[package]
name = "aether"
version = "0.1.0"
authors = ["Nexium Team"]
edition = "2018"

[dependencies]
http = "0.2.4"
tokio = { version = "1.9.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-rustls = "0.22.0"
hyper = { version = "0.14", features = [
    "client",
    "server",
    "http1",
    "http2",
    "runtime",
] }
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.26"
