[package]
name = "aether"
version = "0.1.0"
authors = ["Nexium Team"]
edition = "2018"

[dependencies]
http = "0.2.4"
tokio = { version = "1.9.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-rustls = "0.22.0"
hyper = { version = "0.14", features = [
    "client",
    "server",
    "http1",
    "http2",
    "runtime",
] }
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.26"
kube = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = [
    "v1_20",
] }
futures-util = "0.3.16"
futures = "0.3.16"
